Added Dynamical Systems section
- Added Dynamical Systems section, definitions

--- a/MATH2940/math-2940-study-guide.tex
+++ b/MATH2940/math-2940-study-guide.tex
@@ -1124,6 +1124,17 @@
 			\end{bmatrix}
 		\end{align*}
 	\end{itemize}
+	
+	\subsection{Dynamical Systems}
+	\begin{itemize}
+		\item a \textbf{dynamical system} is a system that evolves over time
+		
+		\item is described by the difference equation $\vec{x_{k + 1}} = A\vec{x_k}$
+		
+		\item a \textbf{trajectory} is $\vec{x_k}$ when it is graphed starting with different $\vec{x_0}$
+		
+		\item an \textbf{attractor} of a dynamical system is the point where all the trajectories in the system head to
+	\end{itemize}
 	\newpage
 	
 	\section{Important Theorems}
@@ -2134,5 +2145,11 @@
 		\item[similar] two matrices $A$ and $B$ are similar if there exists an invertible matrix $P$ such that $A = PBP^{-1}$.
 		
 		\item[diagonalizable] a matrix $A$ is diagonalizable if it is similar to a diagonal matrix $D$ (basically $A = PDP^{-1}$, where $P$ is an invertible matrix).
+		
+		\item[dynamical system] is a system that evolves over time
+		
+		\item[trajectory] $\vec{x_k}$ when it is graphed starting with different $\vec{x_0}$ in a dynamical system.
+		
+		\item[attractor] of a dynamical system is the point where all the trajectories in a dynamical system head to
 	\end{description}
 \end{document}
